<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guetw5</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_details">Messages</string>
    <string name="nav_item_outbox">Outbox</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_login">Login</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_message">消息</string>
    <string name="nav_item_public">公共消息</string>
    <string name="nav_item_read">已读消息</string>
    <string name="nav_item_unread">未读消息</string>
    <string name="nav_item_send">发布消息</string>
    <string name="nav_item_sent">已发消息</string>
    <string name="nav_item_setting">设置</string>
    <string name="nav_item_help">帮助/反馈</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_message</item>
        <item>@string/nav_item_public</item>
        <item>@string/nav_item_outbox</item>
        <item>@string/nav_item_about</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">更新</string>
    <string name="action_refresh_status">正在更新...</string>
    <string name="action_settings">设置</string>
    <string name="action_send">发送</string>
    <string name="action_open_browser">浏览器打开</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="action_login">登录</string>
    <string name="action_logout">注销</string>
    <string name="action_back">返回</string>

    <string name="state_get_error">获取页面失败,请检查网络连接</string>
    <string name="stage_not_login">您没有登录,请重新登录</string>
    <string name="stage_post_failed">发送消息失败</string>
    <string name="stage_post_success">发送消息成功</string>
    <string name="stage_undo_success">撤销消息成功</string>
    <string name="stage_logout_success">注销成功</string>
    <string name="stage_refresh">正在更新...</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_message">发消息</string>

    <string name="action_choose">选择</string>

    <string name="hint_message_to">发送到:</string>
    <string name="hint_message_title">标题</string>
    <string name="hint_message_content">正文</string>
    <string name="hint_message_directions">选择工作方向</string>
    <string name="hint_message_sms">发送短信提示</string>
    <string name="hint_message_limit">限制选项</string>
    <string-array name="limit">
        <item>仅限名单中的部门或人员查看</item>
        <item>不限制(公开)</item>
    </string-array>
    <string name="hint_message_trace">跟踪选项</string>
    <string-array name="trace">
        <item>仅跟踪预设名单</item>
        <item>跟踪全部</item>
    </string-array>
    <string name="hint_message_urgency">紧急度</string>
    <string-array name="urgency">
        <item>普通</item>
        <item>紧急</item>
    </string-array>
    <string name="hint_message_important">重要度</string>
    <string-array name="important">
        <item>一般</item>
        <item>重要</item>
    </string-array>
    <string-array name="directions">
        <item>教务</item>
        <item>科研</item>
        <item>学工</item>
        <item>党政</item>
        <item>工会</item>
    </string-array>

    <string name="create_message_header">消息选项</string>

    <string name="notify_no_contact">用户不存在,请检查用户名称: </string>
    <string name="notify_ask_undo">消息已发送, 是否要撤销发送?</string>
    <string name="action_undo">撤销</string>

    <string name="list_no_data">没有数据</string>

    <string name="title_activity_about">关于本软件</string>
    <string name="about_title">关于本软件</string>
    <string name="about_tips">使用技巧</string>
    <string name="about_tips_content">
        1. 设置选项可以设置自动登录，如果取消该项设置，每次关掉应用之后会要求重新输入用户名和密码。\n
        2. 创建消息的时候，如果对消息选项不进行设置，则使用默认选项发送消息，
        默认选项为：紧急度（普通），重要度（一般），限制选项（仅限名单中的部门或人员查看），跟踪选项（仅跟踪预设名单）
        工作方向（教务），发送短信提示（是），这样可以节省发消息时间。\n
        3. 消息设置页面可以在发消息界面下滑打开，上划收起。\n
        4. 发送消息后，会有5秒钟的撤销消息提示，可以把之前发的消息撤销，提示到时间后，自动返回消息列表页面。\n
    </string>
    <string name="about_disclaimer">免责声明</string>
    <string name="about_disclaimer_content">
        本软件利用黑盒测试实现网站的基本功能，为方便在移动端使用而开发。\n
        所有信息资源和发送消息功能均来自:\n
        http://guetw5.myclub2.com/Home/Index 通知与任务管理系统\n
        由于发送消息功能没有进行充分测试，因此只能保证发送给自己的功能良好，请谨慎使用。\n
        如有任何问题和建议请联系我。</string>
    <string name="about_author_info">jjhome at guet.edu.cn</string>
    <string name="action_reply">回复</string>

</resources>
