<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.guet.jjhome.guetw5.activity.CreateMessageActivity"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/message_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/abc_action_bar_up_description"
        android:background="?attr/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTo"
            android:hint="@string/hint_message_to"
            android:clickable="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:hint="@string/hint_message_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editContent"
            android:hint="@string/hint_message_content"
            android:lines="5"
            android:gravity="top" />

        EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDirection"
            android:hint="@string/hint_message_directions"
            android:onClick="showDirections"
            android:editable="false"
            android:clickable="true"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hint_message_directions"
            android:id="@+id/textView2"
            android:onClick="showDirections"
            android:clickable="true" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_message_sms"
            android:id="@+id/switch1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerUrgency"
            android:hint="@string/hint_message_urgency" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerImportant"
            android:hint="@string/hint_message_important" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerLimit"
            android:hint="@string/hint_message_limit" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTrace"
            android:hint="@string/hint_message_trace" />
    </LinearLayout>

</LinearLayout>
